# mrlcp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  lcplen.hpp  main.cpp  numdefs.hpp
